--- a/registry/src/components/PasswordInput/index.css
+++ b/registry/src/components/PasswordInput/index.css
@@ -1,9 +1,11 @@
-@import '../global.css';
-
-.eye-btn.showed {
-  @apply bg-blue-500 text-white;
+input[type='password']::-ms-clear,
+input[type='password']::-ms-reveal,
+input[type='password']::-webkit-clear-button {
+  display: none;
+  width: 0;
+  height: 0;
 }
 
-.eye-btn.showed:hover {
-  @apply bg-blue-600 text-white;
+.input-wrapper .input-icon.eye-btn {
+  @apply m-2 block h-5 min-h-0 w-5 min-w-0 rounded-md p-0.5;
 }
